* Tunnel Testing:       - Fix counting so it really takes 4 consecutive failures         rather than 4 total to remove a tunnel       - Credit or blame goes to the exploratory tunnel as well         as the tunnel being tested       - Adjust tunnel test timeout based on tunnel length     * ExploratoryPeerSelector: Tweak logging     * ProfileOrganizer: Adjust integration calculation again     * build.xml: Add to help     * checklist.txt: Tweak     * readme.html: Fix forum links     * netDb: Remove tunnel.testFailedTime
Monotone-Parent: e3e30df332c3b9babb3b425cd27a09ffe189d0ba
Monotone-Revision: 5a10a952915352111b9da58bb3354f3871655b5e

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2008-03-22T13:07:38
Monotone-Branch: i2p.i2p

--- a/build.xml
+++ b/build.xml
@@ -3,7 +3,8 @@
    
     <target name="all" >
         <echo message="Useful targets: " />
-        <echo message="  dist:      distclean then package everything up (installer, clean tarball, update tarball)" />
+        <echo message="  pkg:       distclean then package everything up (installer, clean tarball, update tarball)" />
+        <echo message="  dist:      pkg and javadoc" />
         <echo message="  installer: build the GUI installer" />
         <echo message="  tarball:   tar the full install into i2p.tar.bz2 (extracts to build a new clean install)" />
         <echo message="  updater:   tar the built i2p specific files into an i2pupdate.zip (extracts safely over existing installs)" />
