* ExploratoryPeerSelector: Try NonFailing even more     * HostsTxtNamingService: Add reverse lookup support     * Outbound message: Minor cleanup     * i2psnark TrackerCLient: Minor cleanup     * checklist.txt: Minor edit     * hosts.txt: Add perv.i2p, false.i2p, mtn.i2p2.i2p     * i2ptunnel.config: Change CVS client to mtn     * netdb.jsp: Show leaseSet destinations using reverse lookup     * profiles.jsp: First cut at showing floodfill data
Monotone-Parent: f8ce4e63ce4df145ca8638596213c2ea5f0ee608
Monotone-Revision: fc818d2f97ae5e5c41914664c75671526d3972e2

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2008-03-30T21:50:35
Monotone-Branch: i2p.i2p

--- a/installer/resources/i2ptunnel.config
+++ b/installer/resources/i2ptunnel.config
@@ -29,14 +29,14 @@ tunnel.1.option.i2p.streaming.connectDelay=1000
 tunnel.1.option.i2p.streaming.maxWindowSize=1
 tunnel.1.startOnLoad=true
 
-# I2P's cvs server
-tunnel.2.name=cvs.i2p
-tunnel.2.description=I2P CVS pserver
+# I2P's mtn server
+tunnel.2.name=mtn.i2p2.i2p
+tunnel.2.description=I2P Monotone Server
 tunnel.2.type=client
 tunnel.2.sharedClient=true
 tunnel.2.interface=127.0.0.1
-tunnel.2.listenPort=2401
-tunnel.2.targetDestination=cvs.i2p
+tunnel.2.listenPort=8998
+tunnel.2.targetDestination=mtn.i2p2.i2p
 tunnel.2.i2cpHost=127.0.0.1
 tunnel.2.i2cpPort=7654
 tunnel.2.option.inbound.nickname=shared clients
