replaced jetty download-url
Monotone-Parent: 09ea2e85b73f5910fff0cd795f36b6f49d9e99d7
Monotone-Revision: 9faa34c640439d217e424bd47b1ae7429cd0705f

Monotone-Author: dev@welterde.de
Monotone-Date: 2008-05-22T20:52:56
Monotone-Branch: i2p.i2p

--- a/apps/jetty/build.xml
+++ b/apps/jetty/build.xml
@@ -3,7 +3,7 @@
 
     <property name="jetty.sha1" value="021164f84da7304bd1ff07c268b45aa3e0b13322" />
     <property name="jetty.md5" value="a61adc832be6baf2678935506743cfc3" />
-    <property name="jetty.url" value="http://mesh.dl.sourceforge.net/sourceforge/jetty/jetty-5.1.12.zip" />
+    <property name="jetty.url" value="http://dist.codehaus.org/jetty/jetty-5.1.x/jetty-5.1.12.zip" />
     <property name="jetty.filename" value="jetty-5.1.12.zip" />
 
     <target name="all" depends="build" />
