--- a/build.xml
+++ b/build.xml
@@ -9,6 +9,7 @@
         <echo message="  tarball:   tar the full install into i2p.tar.bz2 (extracts to build a new clean install)" />
         <echo message="  updater:   tar the built i2p specific files into an i2pupdate.zip (extracts safely over existing installs)" />
         <echo message="  updaterWithJetty:   tar the built i2p specific files and jetty into an i2pupdate.zip (extracts safely over existing installs)" />
+        <echo message="  updaterSmall:   updater with the essentials only - no SAM, i2psnark, SusiMail, SusiDNS, news.xml, or history.txt" />
         <echo message="  distclean: clean up all derived files" />
         <echo message="  syndie:    generate a standalone syndie install" />
         <echo message="  i2psnark:  generate a standalone i2psnark install" />
@@ -17,22 +18,24 @@
     <target name="dist" depends="pkg, javadoc">
     </target>
     <target name="build" depends="builddep, jar, buildWEB" />
+    <target name="buildSmall" depends="builddepSmall, jarSmall, buildWEB" />
     <target name="buildclean" depends="distclean, build" />
-    <target name="builddep">
+    <target name="builddep" depends="builddepSmall">
 	<!-- build *everything* here, but only once -->
+        <ant dir="apps/sam/java/" target="jar" />
+        <ant dir="apps/susimail/" target="war" />
+        <ant dir="apps/susidns/src" target="all" />
+        <ant dir="apps/i2psnark/java/" target="standalone" />
+    </target>
+    <target name="builddepSmall">
         <ant dir="core/java/" target="jar" />
         <ant dir="router/java/" target="jar" />
         <ant dir="apps/ministreaming/java/" target="jar" />
         <ant dir="apps/streaming/java/" target="jar" />
         <ant dir="apps/i2ptunnel/java/" target="jar" />
-        <ant dir="apps/sam/java/" target="jar" />
         <ant dir="apps/systray/java/" target="jar" />
         <ant dir="apps/routerconsole/java/" target="jar" />
         <ant dir="apps/addressbook/" target="war" />
-        <ant dir="apps/susimail/" target="war" />
-        <ant dir="apps/susidns/src" target="all" />
-        <!-- <ant dir="apps/syndie/java/" target="jar" /> -->
-        <ant dir="apps/i2psnark/java/" target="standalone" />
     </target>
     <target name="buildrouter">
         <ant dir="core/java/" target="distclean" />
@@ -91,28 +94,23 @@
 	<!-- thazzit -->
     </target>
     <target name="compile" />
-    <target name="jar" depends="compile" >
+    <target name="jar" depends="jarSmall" >
+        <copy file="apps/sam/java/build/sam.jar" todir="build/" />
+        <copy file="apps/susimail/susimail.war" todir="build/" />
+        <copy file="apps/susidns/src/susidns.war" todir="build/" />
+        <copy file="apps/i2psnark/i2psnark.war" todir="build/" />
+        <copy file="apps/i2psnark/java/build/i2psnark.jar" todir="build/" />
+    </target>
+    <target name="jarSmall" depends="compile" >
         <copy file="core/java/build/i2p.jar" todir="build/" />
         <copy file="router/java/build/router.jar" todir="build/" />
         <copy file="apps/ministreaming/java/build/mstreaming.jar" todir="build/" />
         <copy file="apps/streaming/java/build/streaming.jar" todir="build/" />
         <copy file="apps/i2ptunnel/java/build/i2ptunnel.jar" todir="build/" />
         <copy file="apps/i2ptunnel/java/build/i2ptunnel.war" todir="build/" />
-        <copy file="apps/sam/java/build/sam.jar" todir="build/" />
         <copy file="apps/systray/java/build/systray.jar" todir="build/" />
         <copy file="installer/lib/jbigi/jbigi.jar" todir="build" />
         <copy file="apps/addressbook/dist/addressbook.war" todir="build/" />
-        <copy file="apps/susimail/susimail.war" todir="build/" />
-        <copy file="apps/susidns/src/susidns.war" todir="build/" />
-        <!--
-        <copy file="apps/syndie/syndie.war" todir="build/" />
-        <copy file="apps/syndie/java/build/syndie.jar" todir="build/" />
-        <copy file="apps/syndie/java/build/sucker.jar" todir="build/" />
-        -->
-        <copy file="apps/i2psnark/i2psnark.war" todir="build/" />
-        <copy file="apps/i2psnark/java/build/i2psnark.jar" todir="build/" />
-        <copy file="apps/jdom/jdom.jar" todir="build/" />
-        <copy file="apps/rome/rome-0.8.jar" todir="build/" />
     </target>
     <target name="javadoc">
         <mkdir dir="./build" />
@@ -304,68 +302,35 @@
     <target name="updaterWithJetty" depends="prepjupdate">
         <zip destfile="i2pupdate.zip" basedir="pkg-temp" />
     </target>
+    <target name="updaterSmall" depends="prepupdateSmall">
+        <zip destfile="i2pupdate.zip" basedir="pkg-temp" />
+    </target>
     <target name="updateTest" depends="prepupdate">
         <ant dir="core/java/" target="jarTest" />    
         <copy file="core/java/build/i2ptest.jar" todir="pkg-temp/lib" />
         <zip destfile="i2pupdate.zip" basedir="pkg-temp" />
     </target>
-    <target name="prepupdate" depends="distclean, build">
+    <target name="prepupdate" depends="distclean, build, prepupdateSmall">
+        <copy file="build/sam.jar" todir="pkg-temp/lib/" />
+        <copy file="build/i2psnark.jar" todir="pkg-temp/lib" />
+        <copy file="build/susimail.war" todir="pkg-temp/webapps/" />
+        <copy file="build/susidns.war" todir="pkg-temp/webapps/" />
+        <copy file="build/i2psnark.war" todir="pkg-temp/webapps/" />
+        <copy file="history.txt" todir="pkg-temp/" />
+        <mkdir dir="pkg-temp/docs/" />
+        <copy file="news.xml" todir="pkg-temp/docs/" />
+    </target>
+    <target name="prepupdateSmall" depends="distclean, buildSmall">
         <delete dir="pkg-temp" />
         <copy file="build/i2p.jar" todir="pkg-temp/lib/" />
         <copy file="build/i2ptunnel.jar" todir="pkg-temp/lib/" />
         <copy file="build/mstreaming.jar" todir="pkg-temp/lib/" />
         <copy file="build/streaming.jar" todir="pkg-temp/lib/" />
-        <copy file="build/sam.jar" todir="pkg-temp/lib/" />
         <copy file="build/router.jar" todir="pkg-temp/lib/" />
         <copy file="build/routerconsole.jar" todir="pkg-temp/lib/" />
-        <!-- <copy file="build/sucker.jar" todir="pkg-temp/lib" /> -->
-        <copy file="build/i2psnark.jar" todir="pkg-temp/lib" />
-        
-        <!--<copy file="installer/resources/runplain.sh" todir="pkg-temp/" />-->
-        
         <copy file="build/i2ptunnel.war" todir="pkg-temp/webapps/" />
         <copy file="build/routerconsole.war" todir="pkg-temp/webapps/" />
         <copy file="build/addressbook.war" todir="pkg-temp/webapps/" />
-        <copy file="build/susimail.war" todir="pkg-temp/webapps/" />
-        <copy file="build/susidns.war" todir="pkg-temp/webapps/" />
-        <!-- <copy file="build/syndie.war" todir="pkg-temp/webapps/" /> -->
-        <copy file="build/i2psnark.war" todir="pkg-temp/webapps/" />
-        <!-- <copy file="apps/i2psnark/java/build/launch-i2psnark.jar" todir="pkg-temp/" /> -->
-        <copy file="apps/i2psnark/jetty-i2psnark.xml" todir="pkg-temp/" />
-        <copy file="history.txt" todir="pkg-temp/" />
-        <mkdir dir="pkg-temp/docs/" />
-        <copy file="news.xml" todir="pkg-temp/docs/" />
-        <!--
-        <copy file="installer/resources/dnf-header.ht" todir="pkg-temp/docs/" />
-        <copy file="installer/resources/dnfp-header.ht" todir="pkg-temp/docs/" />
-        <copy file="installer/resources/dnfb-header.ht" todir="pkg-temp/docs/" />
-        <copy file="installer/resources/dnfh-header.ht" todir="pkg-temp/docs/" />
-	<copy file="installer/resources/ahelper-conflict-header.ht" todir="pkg-temp/docs/" />
-        -->
-        
-        <!-- polecat: please put your modified toolbar.html in installer/resources/toolbar.html 
-             and uncomment the following -->
-        <!-- <copy file="installer/resources/toolbar.html" todir="pkg-temp/docs/" /> -->
-        
-        <!--
-        <mkdir dir="pkg-temp/docs/themes/" />
-        <copy todir="pkg-temp/docs/themes/" >
-          <fileset dir="installer/resources/themes/" />
-        </copy>
-        -->
-        
-        <!-- the addressbook handles this for updates -->
-        <!-- <copy file="hosts.txt" todir="pkg-temp/" /> -->
-        <mkdir dir="pkg-temp/eepsite" />
-        <mkdir dir="pkg-temp/eepsite/webapps" />
-        <mkdir dir="pkg-temp/eepsite/cgi-bin" />
-        <!--
-	<mkdir dir="pkg-temp/syndie" />
-	<mkdir dir="pkg-temp/syndie/archive" />
-	<mkdir dir="pkg-temp/syndie/archive/ovpBy2mpO1CQ7deYhQ1cDGAwI6pQzLbWOm1Sdd0W06c=" />
-	<copy file="installer/resources/blogMeta.snm" tofile="pkg-temp/syndie/archive/ovpBy2mpO1CQ7deYhQ1cDGAwI6pQzLbWOm1Sdd0W06c=/meta.snm" />
-	<copy file="installer/resources/blogPost.snd" tofile="pkg-temp/syndie/archive/ovpBy2mpO1CQ7deYhQ1cDGAwI6pQzLbWOm1Sdd0W06c=/1132012800001.snd" />
-        -->
     </target>
     <target name="prepjupdate" depends="prepupdate, buildWEB">
         <copy file="build/ant.jar" todir="pkg-temp/lib/" />
