* Add some compiler flexibility to two obscure SAM makefiles
Monotone-Parent: a19197f358256f2d97f1a2ccb5a6f3f4df0822a6
Monotone-Revision: 78caedb1faa65c82afadcd02d08958fdf655d112

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2008-06-01T20:50:29

--- a/apps/sam/c/Makefile
+++ b/apps/sam/c/Makefile
@@ -27,15 +27,15 @@ lib/libsam.so: obj/libsam.la
 
 obj/libsam-static.la: $(OBJS)
 	$(STATUS) library '(static)'
-	libtool --mode=link gcc -static $(LDFLAGS) -o $@ $^ >>$(LIBTOOL_LOG)
+	libtool --mode=link $(CC) -static $(LDFLAGS) -o $@ $^ >>$(LIBTOOL_LOG)
 
 obj/libsam.la: $(OBJS)
 	$(STATUS) library '(shared)'
-	libtool --mode=link gcc -rpath  $(DESTDIR) $(LDFLAGS) -o $@ $^ >>$(LIBTOOL_LOG)
+	libtool --mode=link $(CC) -rpath  $(DESTDIR) $(LDFLAGS) -o $@ $^ >>$(LIBTOOL_LOG)
 
 obj/%.lo: src/%.c
 	$(STATUS) compile $*
-	libtool --mode=compile gcc $(CFLAGS) -Iinc/ -c -o $@ $< >>$(LIBTOOL_LOG)
+	libtool --mode=compile $(CC) $(CFLAGS) -Iinc/ -c -o $@ $< >>$(LIBTOOL_LOG)
 
 $(OBJS):|obj
 obj:
@@ -44,7 +44,7 @@ obj:
 
 .deps/%.d: src/%.c
 	$(STATUS) deps $*
-	gcc -Iinc/ -MM -MT obj/$*.o $< -o $@
+	$(CC) -Iinc/ -MM -MT obj/$*.o $< -o $@
 
 -include $(DEPS)
 
