--- a/installer/resources/small/router.config
+++ b/installer/resources/small/router.config
@@ -3,3 +3,4 @@ router.inboundPool.lengthVariance=1
 router.outboundPool.length=1
 router.outboundPool.lengthVariance=1
 stat.full=false
+stat.summaries=none
