Additional BOB fixes. Added BOB to clients.config and wrapper.config for new installs.
Monotone-Parent: 900225f0b8ba77169965ce4499fce478c9f6ef10
Monotone-Revision: 8690efaff23333bbd95e32345185b3fc32bb363a

Monotone-Author: sponge@mail.i2p
Monotone-Date: 2008-10-08T14:28:35
Monotone-Branch: i2p.i2p

--- a/installer/resources/clients.config
+++ b/installer/resources/clients.config
@@ -25,3 +25,9 @@ clientApp.4.main=net.i2p.apps.systray.UrlLauncher
 clientApp.4.name=consoleBrowser
 clientApp.4.args=http://localhost:7657/
 clientApp.4.delay=5
+
+# Start up BOB
+clientApp.5.args=
+clientApp.5.delay=10
+clientApp.5.main=net.i2p.BOB.BOB
+clientApp.5.name=BOB
