--- a/installer/resources/wrapper.config
+++ b/installer/resources/wrapper.config
@@ -48,6 +48,8 @@ wrapper.java.classpath.17=lib/wrapper.jar
 # systray, LGPL
 wrapper.java.classpath.18=lib/systray.jar
 wrapper.java.classpath.19=lib/systray4j.jar
+# BOB
+wrapper.java.classpath.20=lib/BOB.jar 
 
 # Java Library Path (location of Wrapper.DLL or libwrapper.so)
 wrapper.java.library.path.1=.
