Patched java docs to remove sam and bob from the SDK;        SAM and BOB are not part of the SDK in the first place.
Monotone-Parent: d60802ba1075eb09e0aad605b4ea3b598b9777c8
Monotone-Revision: ea49e795cc373e05dd01d3de7a32932e4b5843f3

Monotone-Author: sponge@mail.i2p
Monotone-Date: 2008-10-11T16:50:20
Monotone-Branch: i2p.i2p

--- a/build.xml
+++ b/build.xml
@@ -124,6 +124,8 @@
             use="true" 
             group="SDK net.i2p:net.i2p.*:net.i2p.client:net.i2p.client.*:freenet.support.CPUInformation,
                    Streaming net.i2p.client.streaming,
+                   BOB net.i2p.BOB,
+                   SAM net.i2p.sam:net.i2p.sam.client,
                    RouterConsole net.i2p.router.web,
                    Router net.i2p.router:net.i2p.router.*:net.i2p.data.i2np,
                    Systray net.i2p.apps.systray,
