Addressbook javadoc fixes Addressbook now JDK5 build.xml fixed to remove annoying javadoc warnings.
Monotone-Parent: dcccbcd8e28259a16ee077f62f77aa0406b00641
Monotone-Revision: 7eb424adce534e1feb01b55775be818fbf04d105

Monotone-Author: sponge@mail.i2p
Monotone-Date: 2008-10-12T17:07:21
Monotone-Branch: i2p.i2p

--- a/build.xml
+++ b/build.xml
@@ -149,9 +149,11 @@
             </sourcepath>
             <classpath>
                 <pathelement location="apps/jetty/jettylib/org.mortbay.jetty.jar" />
+                <pathelement location="apps/jetty/jettylib/javax.servlet.jar" />
                 <pathelement location="apps/systray/java/lib/systray4j.jar" />
+                <pathelement location="apps/jrobin/jrobin-1.4.0.jar" />
                 <pathelement location="installer/lib/wrapper/win32/wrapper.jar" />
-                <pathelement location="core/lib/junit.jar" />
+                <pathelement location="core/lib/junit.jar" />                
             </classpath>
         </javadoc>
     </target>
