Add multilanguage support for index.jsp
Monotone-Parent: 5ac386536f7c3dbf7ccc6c2cdd6fb4b7c140cc4b
Monotone-Revision: a416c072412d750a37ff85a393d46ab9415791a0

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2008-10-14T16:23:23
Monotone-Branch: i2p.i2p

--- a/build.xml
+++ b/build.xml
@@ -268,6 +268,7 @@
         <copy file="core/perl/i2ptest.sh" todir="pkg-temp/scripts/" />
         <mkdir dir="pkg-temp/docs" />
         <copy file="readme.html" todir="pkg-temp/docs/" />
+        <copy file="readme_de.html" todir="pkg-temp/docs/" />
         <!-- polecat: please put your modified toolbar.html in installer/resources/toolbar.html 
              and uncomment the following -->
         <!-- <copy file="installer/resources/toolbar.html" todir="pkg-temp/docs/" /> -->
@@ -345,6 +346,9 @@
         <copy file="build/i2ptunnel.war" todir="pkg-temp/webapps/" />
         <copy file="build/routerconsole.war" todir="pkg-temp/webapps/" />
         <copy file="build/addressbook.war" todir="pkg-temp/webapps/" />
+        <!-- New readme_de.html file - For one release only, remove after 0.6.5 is out -->
+        <mkdir dir="pkg-temp/docs" />
+        <copy file="readme_de.html" todir="pkg-temp/docs/" />
     </target>
     <target name="prepupdateRouter" depends="buildrouter">
         <delete dir="pkg-temp" />
