--- a/build.xml
+++ b/build.xml
@@ -270,6 +270,7 @@
         <copy file="readme.html" todir="pkg-temp/docs/" />
         <copy file="readme_de.html" todir="pkg-temp/docs/" />
         <copy file="readme_nl.html" todir="pkg-temp/docs/" />
+        <copy file="readme_sv.html" todir="pkg-temp/docs/" />
         <!-- polecat: please put your modified toolbar.html in installer/resources/toolbar.html 
              and uncomment the following -->
         <!-- <copy file="installer/resources/toolbar.html" todir="pkg-temp/docs/" /> -->
@@ -351,6 +352,7 @@
         <mkdir dir="pkg-temp/docs" />
         <copy file="readme_de.html" todir="pkg-temp/docs/" />
         <copy file="readme_nl.html" todir="pkg-temp/docs/" />
+        <copy file="readme_sv.html" todir="pkg-temp/docs/" />
     </target>
     <target name="prepupdateRouter" depends="buildrouter">
         <delete dir="pkg-temp" />
