* build.xml: Build speedups:       - Don't distclean in the updaterRouter target       - Don't make prepUpdate and prepupdateSmall depend         on distclean       - Don't make susimail build always clean       - Make pkg depend on distclean to be sure       - Clean out more routerconsole and susidns files in 'ant clean'       - i2ptunnel, routerconsole, susidns:         Only build WEB-INF when necessary       - systray: Only build jar when necessary       - Don't build i2psnark standalone for the updater target
Monotone-Parent: 02c27ac1e1f91177e50b247dead0d4bc0b3b13ed
Monotone-Revision: 87809cc362d791180802568efd1abac8e6eba766

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2008-11-09T15:46:08
Monotone-Branch: i2p.i2p

--- a/apps/i2ptunnel/java/build.xml
+++ b/apps/i2ptunnel/java/build.xml
@@ -30,7 +30,7 @@
              basedir="../jsp/" excludes="web.xml, *.java, *.jsp">
         </war>
     </target>
-    <target name="precompilejsp">
+    <target name="precompilejsp" unless="precompilejsp.uptodate">
         <delete dir="../jsp/WEB-INF/" />
         <delete file="../jsp/web-fragment.xml" />
         <delete file="../jsp/web-out.xml" />
@@ -72,6 +72,11 @@
             <replacefilter token="&lt;!-- precompiled servlets --&gt;" value="${jspc.web.fragment}" />
         </replace>
     </target>
+
+    <uptodate property="precompilejsp.uptodate" targetfile="../jsp/web-out.xml">
+        <srcfiles dir= "../jsp" includes="*.jsp, *.html, web.xml"/>
+    </uptodate>
+
     <target name="javadoc">
         <mkdir dir="./build" />
         <mkdir dir="./build/javadoc" />
@@ -84,6 +89,9 @@
     </target>
     <target name="clean">
         <delete dir="./build" />
+        <delete dir="../jsp/WEB-INF/" />
+        <delete file="../jsp/web-fragment.xml" />
+        <delete file="../jsp/web-out.xml" />
     </target>
     <target name="cleandep" depends="clean">
 	<!-- ministreaming will clean core -->
